# Rodinia

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Rodinia.sln  conanfile.py
Rodinia/Core/: CMakeLists.txt
Rodinia/Core/include/: Base.h
Rodinia/Core/include/Rodinia/Core/: Application.hpp  Base.hpp  Logger.hpp
Rodinia/Core/src/: Application.cpp  Logger.cpp  Logger.h
Rodinia/Core/tests/: ApplicationUnit.cpp
Rodinia/Renderer/: CMakeLists.txt
Rodinia/Renderer/include/: Base.h
Rodinia/Renderer/include/Rodinia/Renderer/: Base.hpp
Rodinia/Renderer/src/: Renderer.cpp
RodiniaCore/: CMakeLists.txt  RodiniaCore.vcxproj  RodiniaCore.vcxproj.filters
RodiniaCore/include/: RodiniaCore.h
RodiniaCore/src/: RodiniaApplication.cpp  RodiniaApplication.h  RodiniaEntryPoint.h  RodiniaLogger.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/src/: Sandbox.cpp
